# takehome_dines

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml
epos/: authentication.py  permissions.py  settings.py  urls.py
payment/: admin.py  gateway.py  models.py  serializers.py  tests.py  urls.py  views.py
payment/migrations/: 0001_initial.py
tabs/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
tabs/management/commands/: seed_menu.py
tabs/migrations/: 0001_initial.py  0002_alter_tab_status.py
