[project]
name = "takehome-dines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ 
    "django>=5.2.6",
    "djangorestframework>=3.16.1",
    "psycopg2-binary>=2.9.10",
    "redis>=5.0.0",
    "drf-spectacular>=0.27.0"
    ]
